--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-tactile
-title: Kayak Polo Wiki
-description: [Home](http://nykp.github.io/wiki)
+title: [Kayak Polo Wiki](http://nykp.github.io/wiki)
